# routes/index.js
@@ -1,9 +1,30 @@
-var express = require('express');
-var router = express.Router();
+const express = require("express");
+const router = express.Router();
+const { redis } = require("../Services/Redis.Service");
+const UserService = require("../services/User.Service");
+const UrlService = require("../services/Urls.Service");
+const UserModel = require("../models/User");
 
-/* GET home page. */
-router.get('/', function(req, res, next) {
-  res.render('index', { title: 'Express' });
+router.get("/:code", async (req, res, next) => {
+  const { code } = req.params;
+  try {
+    const codeValue = await redis.get(code);
+    if (!codeValue) {
+      return res.status(404).json({ error: "Code not found" });
+    }
+    const { longUrl, username } = JSON.parse(codeValue);
+    const user = await UserService.getUserByEmail(username);
+    if (user) {
+      
+      res.redirect(longUrl);
+    } else {
+      console.log("User not found");
+      res.sendStatus(404);
+    }
+  } catch (err) {
+    console.log(err);
+    next(err);
+  }
 });
 
 module.exports = router;
